@@ -24,6 +24,15 @@
     </text>
   </lang>
   <autodetect>
+    <snmp>
+      <description>hp LaserJet 2430</description>
+    </snmp>
+    <general>
+      <manufacturer>Hewlett-Packard</manufacturer>
+      <model>hp LaserJet 2430</model>
+      <description>Hewlett-Packard LaserJet 2430</description>
+      <commandset>PJL,MLC,PCLXL,PCL,PJL,POSTSCRIPT,PDF</commandset>
+    </general>
   </autodetect>
   <functionality>A</functionality>
   <driver>Postscript</driver>
