@@ -1,3 +1,8 @@
+2005-10-07  Tim Waugh  <twaugh@redhat.com>
+
+	* printer/HP-LaserJet_2430.xml: Added IEEE 1284 information (RH
+	  bug #170020).
+
 2005-09-28  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* db/sorce/PPD/Kyocera: Added the current Kyocera PPDs (from
